--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chess client for Resker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "DEBUG=stocto*,nock* RESKER_HOST=localhost mocha",
     "start": "$(npm bin)/forever start forever.json"
   },
   "author": "Miguel Espinoza",
@@ -17,5 +17,15 @@
     "debug": "^4.1.1",
     "forever": "^1.0.0",
     "node-uci": "^1.3.2"
+  },
+  "devDependencies": {
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.10.1",
+    "mocha": "^7.0.1",
+    "nock": "^12.0.1"
+  },
+  "mocha": {
+    "bail": true,
+    "spec": "./test"
   }
 }
